feat: add user registration functionality and lab sample management
- Updated package.json to include necessary type definitions for Express, CORS, and WebSocket.
- Added new routes for user registration and lab dashboard.
- Implemented SampleService with a method to register samples.
- Created UserService for user registration with a DTO interface.
- Enhanced InventoryComponent to track medicine and item quantities with confirmation prompts.
- Developed DashboardComponent for lab management with navigation to sample registration.
- Created RegisterSampleComponent with a comprehensive form for different sample types (Blood, DNA, Saliva).
- Added RegisterUserComponent for user registration with form validation.
- Updated reception dashboard to include navigation to user registration.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022"
+    // Ensure there is no "types" or "typeRoots" field referencing missing types
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
