--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "@angular-devkit/build-angular": "19.2.8",
     "@angular/cli": "19.2.8",
     "@angular/compiler-cli": "19.2.8",
+    "@types/connect": "^3.4.38",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/jasmine": "~5.1.0",
+    "@types/ws": "^8.18.1",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
