feat: Update output path in Angular build configuration and add GitHub Actions workflow for AWS deployment

--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/biotrack-frontend/browser",
+            "outputPath": "dist/biotrack-frontend",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
